--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/greetingLayout"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/activity_layout" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="bottom"
 
-        <TextView
-            android:id="@+id/textViewGreeting"
+        android:contentInsetLeft="0dp"
+        android:contentInsetStart="0dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        app:fabCradleMargin="30dp"
+        app:fabCradleRoundedCornerRadius="50dp"
+        app:fabAlignmentMode="center"
+        app:backgroundTint="@color/orange">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello!\nWelcome to Cookmark."
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
-            android:layout_marginBottom="16dp"/>
+            app:labelVisibilityMode="labeled"
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_cookmark"/>
+            app:menu="@menu/bottom_nav_menu"
+            android:background="@color/orange"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            android:padding="5dp"
+            app:itemIconSize="25dp"
+            />
 
+    </com.google.android.material.bottomappbar.BottomAppBar>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/mnSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/bottom_navigation"
+        app:fabCustomSize="70dp"
+        app:maxImageSize="28dp"
+        android:layout_gravity="bottom|center"
 
-        <LinearLayout
-            android:id="@+id/loginLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
+        android:src="@drawable/nav_search"
+        app:backgroundTint="@color/purple"
+        app:tint="@color/white"/>
 
-            <TextView
-                android:id="@+id/textViewLogIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Already have an account? "
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:layout_marginBottom="8dp"/>
-
-            <Button
-                android:id="@+id/buttonLogIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Log In"/>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/buttonRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Register"/>
-
-        <TextView
-            android:id="@+id/textViewOr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="or"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
-
-        <Button
-            android:id="@+id/buttonSignInGoogle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign In with Google"/>
-
-
-    </LinearLayout>
-    
-
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
