--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,16 +5,16 @@
     <item android:id ="@+id/mnExplore"
         android:title="Explore"
         android:icon="@drawable/nav_explore"
-         />
+        />
 
     <item android:id ="@+id/mnPlan"
         android:title="Plan Meal"
         android:icon="@drawable/nav_calendar"
         />
 
-    <item android:id ="@+id/mnSearch"
-        android:title="Search"
-        android:icon="@drawable/nav_search"
+    <item android:id ="@+id/empty"
+        android:title=""
+        android:enabled="false"
         />
 
     <item android:id ="@+id/mnUpload"
@@ -23,7 +23,7 @@
         />
 
     <item android:id ="@+id/mnCookmarked"
-        android:title="Cookmarked"
+        android:title="Cook Marked"
         android:icon="@drawable/nav_cookmark"
         />
 
