--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
+    <color name="purple">#505988</color>
+    <color name="orange">#F09253</color>
+    <color name="black">#424757</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="disabled">#00000080</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
