--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,80 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/greetingLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".Landing">
 
-    <LinearLayout
-        android:id="@+id/greetingLayout"
+    <TextView
+        android:id="@+id/textViewGreeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Hello!"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewGreeting2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Welcome to Cookmark."
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="24dp"
+        android:src="@drawable/logo_cookmark" />
 
-        <TextView
-            android:id="@+id/textViewGreeting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello!\nWelcome to Cookmark."
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
-            android:layout_marginBottom="16dp"/>
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_cookmark"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/loginLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewLogIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
                 android:text="Already have an account? "
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:layout_marginBottom="8dp"/>
+                android:textColor="@color/purple"
+                android:textSize="16sp" />
 
-            <Button
+            <TextView
                 android:id="@+id/buttonLogIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Log In"
-                android:backgroundTint="@color/transparent"
-                android:textColor="@color/purple"/>
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/log_in"
+                android:textColor="@color/purple"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/buttonRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Register"
-            android:backgroundTint="@color/orange"/>
-
-        <TextView
-            android:id="@+id/textViewOr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="or"
+            android:layout_below="@id/loginLayout"
+            android:layout_alignStart="@id/loginLayout"
+            android:layout_alignEnd="@id/loginLayout"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_register"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Register"
+            android:textAllCaps="false"
             android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
+            app:backgroundTint="@color/orange" />
 
-        <Button
-            android:id="@+id/buttonSignInGoogle"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/orLayout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign In with Google"
-            android:backgroundTint="@color/purple"/>
+            android:layout_below="@id/buttonRegister"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    </LinearLayout>
-</RelativeLayout>
+            <TextView
+                android:id="@+id/horizontalLineOr1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.5"
+                android:fontFamily="@font/poppins_medium"
+                android:paddingBottom="22dp"
+                android:text="@string/HorizontalLineOr1"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewOr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="\u00A0\u00A0or\u00A0\u00A0"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/horizontalLineOr2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.5"
+                android:fontFamily="@font/poppins_medium"
+                android:paddingBottom="22dp"
+                android:text="@string/HorizontalLineOr2"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/orLayout"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/googleImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/register_google" />
+
+            <Button
+                android:id="@+id/buttonSignInGoogle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_google"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Sign In with Google"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                app:backgroundTint="@color/purple" />
+
+        </LinearLayout>
+    </RelativeLayout>
+</LinearLayout>
