--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="disabled">#00000080</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="text_gray">#75424757</color>
 </resources>
