--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="disabled">#00000080</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="greyHint">#8e919a</color>
+    <color name="red">#d11a2a</color>
 </resources>
