--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="disabled">#00000080</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="text_gray">#75424757</color>
+
+    <color name="greyHint">#8e919a</color>
+    <color name="red">#d11a2a</color>
 </resources>
