--- a/app/src/main/res/layout/manage_recipe_item.xml
+++ b/app/src/main/res/layout/manage_recipe_item.xml
@@ -2,18 +2,28 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="@drawable/button_field"
+    android:layout_marginBottom="14sp"
     tools:context=".MainActivity">
 
     <!-- Recipe Image -->
-    <ImageView
-        android:id="@+id/recipeImage"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img_placeholder" />
+        app:cardCornerRadius="20sp">
+
+        <ImageView
+            android:id="@+id/recipeImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_placeholder" />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <!-- Recipe info -->
     <LinearLayout
@@ -128,7 +138,7 @@
     <!-- Edit -->
     <ImageView
         android:id="@+id/editButton"
-        android:layout_marginTop="110sp"
+        android:layout_marginTop="100sp"
         android:layout_marginRight="17sp"
         android:layout_width="36sp"
         android:layout_height="36sp"
