--- a/app/src/main/res/layout/item_recipe_list.xml
+++ b/app/src/main/res/layout/item_recipe_list.xml
@@ -1,4 +1,3 @@
-<!-- res/layout/activity_main.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -62,7 +61,7 @@
 
         <TextView
             android:id="@+id/recipe_title"
-            android:layout_width="wrap_content"
+            android:layout_width="182dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
@@ -70,6 +69,8 @@
             android:text="@string/chicken_cordon_bleu"
             android:textColor="@color/purple"
             android:textSize="16sp"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintBottom_toTopOf="@+id/foodtype_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/recipe_cookmarks" />
